--- a/gb/23/8/23/n14059667.md
+++ b/gb/23/8/23/n14059667.md
@@ -11,10 +11,6 @@
 <p>近年来<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B1%8F%E4%B8%9C.md#1">屏东</a>远近驰名的胜利星村，不仅是文创聚落也是全台最大的眷村聚落，众多外省军官、眷属的曾经在此生活，而台湾<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%96%87%E5%AD%A6%E9%A6%86.md#1">文学馆</a>考察外省作家们在台湾几十年的书写历史阶段，找出外省族群不同阶层的境遇，及与其他省籍族群的互动，更重要的是，以文学表达出来的文字，希望观众看到文字时，能感动体谅，丰富知识层面，在面对政治议题之时，因为特有的人称视角转动而能换位思考，更能让台湾的所有人缓和冲突。</p>
 <p>文化处表示，这次展览献给1949年以为只是暂时退守的外省军士、眷属、他们的后代，以及在台湾共同生活的所有族群，展出内容是台湾70年的所谓“外省文学”、“移民文学”，展览日期自8月22日起至113年2月18日止。</p>
 <p>责任编辑：陈玟绮</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/15/10/4/n4542221.md#1">诗是什么？如何表现？</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/16/3/9/n4658598.md#1">经典再现  席慕蓉新诗集《除你之外》</a></li>
@@ -22,41 +18,35 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/21/7/28/n13121292.md#1">热忱不懈 雕版艺术教育家 潘元石</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/21/11/8/n13362373.md#1">台文馆、台史博升格 提升文化量能</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/3/13/n13642967.md#1">走一段民主路 黄伟哲宣布设“汤德章大道”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059671.md#1">屏东潮州建基圆环标线改造 交通事故降6成</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059612.md#1">全嘉动起来“勇壮嘉义队”报名征选开跑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059578.md#1">花花世界绿色疗育实作插花 市长到场勉励</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059563.md#1">完成台湾历史最后一块拼图 《云林县志》编纂正式开启</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106112.md#1">跨县市交流带动城市发展 黄敏惠率团赴新北</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106094.md#1">嘉市府参访 桃市图新总馆与横山书法艺术馆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106015.md#1">2023嘉义艺术节  欣赏舞台演出＆逛造梦市集</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105953.md#1">爱的种子已播下 期待云林莿桐花海盛开</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/1/n11293536.md#1" target="_blank">【征文】元正戊：弦高退秦军救郑国后为何拒受重赏</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/21/n11602447.md#1" target="_blank">他们为我们的生活带来光明（4）</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/10/7/23/n2974481.md#1" target="_blank">鲜为人知的马克思之四：好斗的马克思</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/8/22/n9555520.md#1" target="_blank">为什么绝症有时可以不医而愈？</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/20/n14057320.md#1">在高空目击UFO 美航空公司机长拍下画面</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/13/n14053239.md#1">【未解之谜】震惊世界 悬空寺之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/9/n14051156.md#1">带你认识六大茶系</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14049845.md#1">【古道人生】丈夫试测妻子是否忠心 结果酿成大祸</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056246.md#1">【未解之谜】上古通天神树 在这里？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058904.md#1">【十字路口】台湾当归或中共归西？红朝现危机</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058901.md#1">【拍案惊奇】白纸英雄成功润出 传习下放权力</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14059115.md#1">【秦鹏观察】港商炮轰中南海 经济问题根在政治</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/20/n14057571.md#1">【独家】中共内部操作曝京津冀洪灾系人祸</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/20/n14057540.md#1">张俊杰成功“润”出 披露遭中共迫害经历</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/15/n14054131.md#1">2024年这十款最好新车售价低于3万美元</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14058450.md#1">《好声音》再被爆黑幕 潘玮柏椅子莫名自转身</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/20/n14057602.md#1">挺李玟 长春官方电台宣布永不合作《好声音》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/20/n14057626.md#1">与李玟遭遇相似 乐嘉自曝录《超级演说家》受辱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14058419.md#1">疑宣布退出演艺圈5年不拍戏 胡歌帖文引猜测</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14059068.md#1">前央视名嘴崔永元摆摊卖字画 憔悴模样曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14057951.md#1">巴菲特下赌新房建筑商 投8亿买这3股</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14058056.md#1">4种洗澡习惯可能会让你掉头发 赶快改过来</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/17/n14055872.md#1">预防帕金森病吃什么好？补充4种营养很重要</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053821.md#1">花生又称长寿果 这样吃可软化血管降血压</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/13/n14053049.md#1">左抱婴儿右牵男孩 站上演讲台的勇敢身影</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103809.md#1">【未解之谜】朵洛莉丝催眠故事（4）人类至关重要的10年</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104870.md#1">【晚间新闻】中共紧急发文 严控悼念李克强</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105977.md#1">【全球新闻】李克强去世 中共团派终结</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105080.md#1">【中国禁闻】李克强悼念活动扩大 民借机表达积怨</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105065.md#1">跳级考上泰国医学院 “盖儿”迎18岁成年礼</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104309.md#1">“MeToo”运动曾让亨利卡维尔怕和女性说话</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104554.md#1">首位黑人动作演员理察朗崔罹癌病逝 享寿81岁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104502.md#1">好莱坞停摆 道具业者2千坪仓库仅老板留守</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077833.md#1">你的病痛 可能都是脊椎造成的</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104643.md#1">【车评】5.6升引擎会否是绝响！？2023 Infiniti QX80 Sensory 4WD</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/23/n14059667.htm">台湾战后移民文学展 屏东文学馆开展</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059667.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
