--- a/gb/23/9/7/n14068432.md
+++ b/gb/23/9/7/n14068432.md
@@ -15,45 +15,36 @@
 <p>犹他州第二国会选区的特别选举大选定于11月21日举行。</p>
 <p>责任编辑：叶紫微#</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/17/n13847361.md#1">犹他州选战激烈 为参院控制权之争增添变数</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/27/n13959687.md#1">美中关系紧张之际 中共渗透犹他州引关注</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/31/n14007642.md#1">美国犹他州联邦众议员斯图尔特宣布辞职</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/5/n14067678.md#1">罗德岛和犹他州周二补选 填补美国众院两席位</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/31/n10265684.md#1" target="_blank">共产暴政录：中共为什么要败坏中国人的道德</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/12/24/n4042174.md#1" target="_blank">大陆民间这些惊人预言都指向同一件大事</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/11/26/n9894907.md#1" target="_blank">毛时代的诗坛乱象</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/8/7/n11436959.md#1" target="_blank">一位中国老太在欧洲不平凡的20年（下）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064023.md#1">古埃及《托特预言》：创世主末后救世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065399.md#1">【未解之谜】命中注定爱上你？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066098.md#1">奥地利女子转生为邻居的儿子 过世前就预告</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064392.md#1">研究5000例濒死体验 美国医生相信人有轮回</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/29/n14044075.md#1">【古道人生】秀才行善得亡灵指点 接连及第成进士</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14068227.md#1">【新闻看点】惊现“雷暴哮喘”内蒙传出核泄漏</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/5/n14067638.md#1">【探索时分】俄伊尔76烧成灰 图22逆火烧成渣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14068232.md#1">【时事金扫描】习被元老训斥 莫言被告文化间谍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/5/n14067619.md#1">内斗激烈 传习近平在北戴河遭元老挑战</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/5/n14067274.md#1">中纪委发文现新说法 分析：反映官员绝望心态</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/4/n14066933.md#1">中共推认房不认贷救楼市 专家：风险增加</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066400.md#1">悲观发文后帅气现身 胡歌与梁朝伟合照露灿笑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/4/n14067033.md#1">赵薇“被消失”2年多 亲哥哥赵健曝她近况</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/4/n14067059.md#1">停播一周 节目单惊现《好声音》播出资讯网炸锅</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066410.md#1">演唱会上蚊子飞进嘴里 李荣浩的反应笑翻歌迷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066437.md#1">如何决定接拍一部电影？梁朝伟：随命运安排</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14059961.md#1">耳鸣背后原因不简单！中医治耳鸣2招切中要害</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/4/n14066785.md#1">汽车生锈怎么去除？ 用这种饮料几秒见效</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066357.md#1">基隆和平岛戏水 寻找奇岩怪石</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062026.md#1">姜黄治炎症、疼痛、发烧 3种药剂急救法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/5/n14067348.md#1">父母必看 三招可建立坚不可摧的亲子关系</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103809.md#1">【未解之谜】朵洛莉丝催眠故事（4）人类至关重要的10年</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104870.md#1">【晚间新闻】中共紧急发文 严控悼念李克强</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105977.md#1">【全球新闻】李克强去世 中共团派终结</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105080.md#1">【中国禁闻】李克强悼念活动扩大 民借机表达积怨</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105065.md#1">跳级考上泰国医学院 “盖儿”迎18岁成年礼</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104309.md#1">“MeToo”运动曾让亨利卡维尔怕和女性说话</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104554.md#1">首位黑人动作演员理察朗崔罹癌病逝 享寿81岁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104502.md#1">好莱坞停摆 道具业者2千坪仓库仅老板留守</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077833.md#1">你的病痛 可能都是脊椎造成的</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104643.md#1">【车评】5.6升引擎会否是绝响！？2023 Infiniti QX80 Sensory 4WD</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/7/n14068432.htm">犹他州国会补选 众议员前助手获共和党提名</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/9/7/n14068432.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
